--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "good-console": "^7.1.0",
     "inert": "^5.1.0",
     "vision": "^5.3.2",
-    "hapi-swagger": "^9.1.1",
+    "hapi-swagger": "glennjones/hapi-swagger",
     "sequelize": "^4.37.4",
     "sequelize-cli": "^4.0.0",
     "sequelize-fixtures": "^0.7.0",
